impresion detalle pelambre

--- a/ServicuerosSA/Views/Pelambres/Index.cshtml
+++ b/ServicuerosSA/Views/Pelambres/Index.cshtml
@@ -305,21 +305,23 @@
                     <table class="table table-bordered">
                         <thead>
                             <tr>
-                                <td style="font-size:xx-small" colspan="6" align="center"> Bombo  </td>
+                                <th> Lote </th>
 
-                                <td style="font-size:xx-small" colspan="6" align="center"> Cantidad </td>
+                                <th> Bombo  </th>
 
-                                <td style="font-size:xx-small" colspan="6" align="center"> Seleccion </td>
+                                <th> Cantidad </th>
 
-                                <td style="font-size:xx-small" colspan="6" align="center"> Peso(Kg) </td>
+                                <th> Seleccion </th>
 
-                                <td style="font-size:xx-small" colspan="6" align="center"> Fecha </td>
+                                <th> Peso(Kg) </th>
 
-                                <td style="font-size:xx-small" colspan="6" align="center"> Bodega Nº </td>
+                                <th> Fecha </th>
+
+                                <th> Bodega Nº </th>
                             </tr>
 
                         </thead>
-
+                        <tbody id="TablaDetallePelambre"></tbody>
                     </table>
                 </div>
             </div>
