--- a/ServicuerosSA/Views/Pelambres/Index.cshtml
+++ b/ServicuerosSA/Views/Pelambres/Index.cshtml
@@ -74,6 +74,10 @@
                         <label id="mensajep" class="col-md-2 control-label label-danger"></label>
                     </div>
                     <div class="form-group">
+                        <label class="control-label">Fecha de Proceso</label>
+                        <input id="fecha" name="fecha" class="form-control" type="date"/>
+                    </div>
+                    <div class="form-group">
                         <label class="control-label">Observaciones</label>
                         <textarea id="observacion" name="observacion" class="form-control"></textarea>
                     </div>
