--- a/ServicuerosSA/Views/Pelambres/Index.cshtml
+++ b/ServicuerosSA/Views/Pelambres/Index.cshtml
@@ -4,6 +4,11 @@
     ViewData["Title"] = "Proceso en Pelambre";
 }
 
+<STYLE>
+    table.SaltoDePagina {
+        PAGE-BREAK-AFTER: always
+    }
+</STYLE>
 <h2>Proceso en Pelambre</h2>
 <p>
     <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoPelambre" onclick="ListaFormulas(); ListaBombos(); ListaPelambre(); listaTipoPiel(); listaClasificaciones(); listaPersonal()">Nuevo Proceso</a>
@@ -120,86 +125,6 @@
 </div>
 
 
-<div class="modal fade" id="ModificarPelambre" tabindex="-1" role="dialog" aria-labelledby="EtiquetaModal">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close"
-                        data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-                <h4 class="modal-title"
-                    id="EtiquetaModal">
-                    Ingreso de Proceso Pelambre
-                </h4>
-            </div>
-            <div class="modal-body">
-                <form>
-                    <div class="form-group">
-                        <label class="control-label">Bombo</label>
-                        <select id="bomboId" name="bomboId" required class="form-control">
-                            <option value="0">Seleccione un Bombo</option>
-                        </select>
-                        <label id="mensajeb" class="col-md-2 control-label label-danger"></label>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label">Fórmula</label>
-                        <select id="formulaId" name="formulaId" required class="form-control">
-                            <option value="0">Seleccione una Formula</option>
-                        </select>
-                        <label id="mensajef" class="col-md-2 control-label label-danger"></label>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label">Personal Asignado</label>
-                        <select id="personalId" name="personalId" required class="form-control">
-                            <option value="0">Seleccione el Personal asignado a esta operación</option>
-                        </select>
-                        <label id="mensajep" class="col-md-2 control-label label-danger"></label>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label">Fecha de Proceso</label>
-                        <input id="fecha" name="fecha" class="form-control" type="date" />
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label">Observaciones</label>
-                        <textarea id="observacion" name="observacion" class="form-control"></textarea>
-                    </div>
-                    <table class="table" id="tablaPlambre">
-                        <thead>
-                            <tr>
-                                <th>
-                                    Selección
-                                </th>
-                                <th>
-                                    Codigo Lote
-                                </th>
-                                <th>
-                                    Tipo de Piel
-                                </th>
-                                <th>
-                                    Clasificacion Pelo
-                                </th>
-                                <th>
-                                    Numero de Pieles
-                                </th>
-                                <th>
-                                    Peso
-                                </th>
-                            </tr>
-                        </thead>
-                        <tbody id="LotesLista"></tbody>
-                    </table>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-                <button type="button" class="btn btn-primary" onclick="GuardaPelambre()">Guardar</button>
-
-            </div>
-        </div>
-    </div>
-</div>
-
 <div class="modal fade" id="ImpresionPelambre" tabindex="-1" role="dialog" aria-labelledby="EtiquetaModal">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -216,7 +141,7 @@
             <div class="modal-body" id="impresion">
 
                 <div class="modal-body" id="areaImprimir">
-                    
+
                     <div class="form-group">
 
                         <table class="table table-bordered">
@@ -323,7 +248,7 @@
                     </div>
                     @* Hoja de pesaje *@
                     <div class="form-group">
-                        <table class="table table-bordered">
+                        <table class="table table-bordered SaltoDePagina">
                             <tr>
                                 <td style="font-size:x-small" colspan="4">PESAJE DE PRODUCTO QUIMICO</td>
                             </tr>
@@ -378,7 +303,7 @@
                         </table>
                     </div>
                     <div class="form-group">
-                        <table class="table table-bordered">
+                        <table class="table table-bordered SaltoDePagina" >
                             <thead>
                                 <tr>
                                     <td style="font-size:x-small" colspan="2">PRODUCTO</td>
@@ -403,12 +328,12 @@
                         </table>
                     </div>
                 </div>
-<<<<<<< HEAD
-               </div>
-=======
+
+
+
                 @* Hoja de pesaje *@
                 <div class="form-group">
-                    <table class="table table-bordered">
+                    <table class="table table-bordered SaltoDePagina">
 
                         <thead>
                             <tr>
@@ -428,8 +353,9 @@
                             </tr>
 
                         </thead>
-                        <tbody id="TablaDetallePelambre"></tbody>
-
+                        <tbody id="TablaPesaje"></tbody>
+                        </table>
+                    <table style="PAGE-BREAK-AFTER: always">
                         <tr>
                             <td style="font-size:x-small" colspan="4">PESAJE DE PRODUCTO QUIMICO</td>
                         </tr>
@@ -489,7 +415,8 @@
 
                     </table>
                 </div>
->>>>>>> 404720c59187c10d263ecd594d9dba802507a1cb
+            </div>
+
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
                     <button type="button" class="btn btn-primary" onclick="Impresion('areaImprimir');">Imprimir</button>
