--- a/ServicuerosSA/Views/Descarnes/Index.cshtml
+++ b/ServicuerosSA/Views/Descarnes/Index.cshtml
@@ -5,7 +5,7 @@
 
 <h2>Proceso en Descarne</h2>
 <p>
-    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoDescarne" onclick="ListaPelambreDescarne(); listaPersonal()">Nuevo Proceso</a>
+    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoDescarne" onclick="ListaPelambreDescarne(); listaPersonal(); ListaDescarne(); ">Nuevo Proceso</a>
 </p>
 <table class="table">
     <thead>
@@ -21,7 +21,7 @@
             <th></th>
         </tr>
     </thead>
-    <tbody id="descarne"> </tbody>
+    <tbody id="DescarneLista"> </tbody>
 </table>
 
 <div class="modal fade" id="IngresoDescarne" tabindex="-1" role="dialog" aria-labelledby="EtiquetaModal">
