--- a/ServicuerosSA/Views/Bodegatripas/Index.cshtml
+++ b/ServicuerosSA/Views/Bodegatripas/Index.cshtml
@@ -68,6 +68,21 @@
                         <br />
                         <span id="mensajeper" class="alert alert-danger hidden">Seleccione la clasificacion</span>
                     </div>
+                    <table class="table" id="tablaTripa">
+                        <thead>
+                            <tr>
+                                <th>
+                                    Codigo lote
+                                    </th>
+                                <th>
+                                    Numero de pieles
+                                </th>
+                                <th>
+                                    
+                                </th>
+                              </tr>
+                            </thead>
+                    </table>
                 </form>
             </div>
             <div class="modal-footer">
