--- a/ServicuerosSA/Views/Bodegatripas/Index.cshtml
+++ b/ServicuerosSA/Views/Bodegatripas/Index.cshtml
@@ -5,7 +5,7 @@
 <h2>Lista en tripas</h2>
 
 <p>
-    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoClasificacionTripa" onclick=" Listatipotripa(); listaPersonal()">Nueva Clasificacion</a>
+    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoClasificacionTripa" onclick=" Listatipotripa(); listaPersonal();">Nueva Clasificacion</a>
 </p>
 <table class="table">
     <thead>
@@ -55,8 +55,8 @@
                         <label id="TotalPielesInput" name="TotalPielesInput" class="control-label alert alert-success hidden"></label>
                     </div>
                     <div class="form-group">
-                        <label class="control-label">ClasificacionTripa</label>
-                        <select id="ClasificacionTripaId" name="ClasificacionTripaId" required class="form-control">
+                        <label class="control-label">Clasificacion Tripa</label>
+                        <select id="ClasificaciontripaId" name="ClasificaciontripaId" required class="form-control">
                             <option value="0">Seleccione la Clasificacion asignada para este proceso</option>
                         </select>
                         <br />
