--- a/ServicuerosSA/Views/Bodegatripas/Index.cshtml
+++ b/ServicuerosSA/Views/Bodegatripas/Index.cshtml
@@ -5,7 +5,7 @@
 <h2>Lista en tripas</h2>
 
 <p>
-    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoClasificacionTripa" onclick=" Listatipotripa(); listaPersonal();">Nueva Clasificacion</a>
+    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoClasificacionTripa" onclick="  listaPersonal(); Listatipotripa(); ">Nueva Clasificacion</a>
 </p>
 <table class="table">
     <thead>
@@ -44,7 +44,7 @@
                 <form>
                     <div class="form-group">
                         <label class="control-label">Codigo Lote</label>
-                        <select id="loteid" name="loteid" required class="form-control">
+                        <select id="Descarneid" name="Descarneid" required class="form-control">
                             <option value="0">Seleccione el Lote que desee</option>
                         </select>
                         <br />
