--- a/ServicuerosSA/Views/Bodegatripas/Index.cshtml
+++ b/ServicuerosSA/Views/Bodegatripas/Index.cshtml
@@ -52,7 +52,7 @@
                     </div>
                     <div class="form-group">
                         <label class="control-label">Numero de pieles en el lote</label>
-                        <label id="TotalPieles" name="TotalPieles" class="control-label alert alert-success hidden"></label>
+                        <label id="PielesInput" name="PielesInput" class="control-label alert alert-success hidden"></label>
                     </div>
                     <div class="form-group">
                         <label class="control-label">Clasificacion Tripa</label>
