--- a/ServicuerosSA/Views/Descarnes/Index.cshtml
+++ b/ServicuerosSA/Views/Descarnes/Index.cshtml
@@ -5,7 +5,7 @@
 
 <h2>Proceso en Descarne</h2>
 <p>
-    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoDescarne" onclick="ListaPelambreDescarne(); listaPersonal(); ListaDescarne(); ">Nuevo Proceso</a>
+    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoDescarne" onclick="ListaPelambreDescarne(); listaPersonal(); ListaDescarne(); ListaIndex(); ">Nuevo Proceso</a>
 </p>
 <table class="table">
     <thead>
