--- a/ServicuerosSA/Views/Bodegatripas/Index.cshtml
+++ b/ServicuerosSA/Views/Bodegatripas/Index.cshtml
@@ -11,17 +11,17 @@
     <thead>
         <tr>
                <th>
+                   Codigo lote
+                </th>
+               <th>
                    NumeroPieles
+               </th>
+                <th>
+                    ClasificacionTripa
                 </th>
                 <th>
                     peso
                 </th>
-                <th>
-                    Personal
-                </th>
-            <th>
-                ClasificacionTripa
-            </th>
             <th></th>
         </tr>
     </thead>
@@ -65,7 +65,7 @@
                     <div class="form-group">
                         <label class="control-label">Numero de Pieles</label>
                         
-                        <input id="NumeroPielesInput" type="number" name="NumeroPielesInput" class="form-control">
+                        <input id="NumeroPielesInput" type="number" name="NumeroPielesInput" class="form-control" onfocus="controlnumeropieltripa()">
                     </div>
                     <div class="form-group">
                         <label class="control-label">Peso</label>
