--- a/ServicuerosSA/Views/Descarnes/Index.cshtml
+++ b/ServicuerosSA/Views/Descarnes/Index.cshtml
@@ -41,7 +41,7 @@
                 <form>
                     <div class="form-group">
                         <label class="control-label">Lotes en Pelambre</label>
-                        <select id="PelambreId" name="PelambreId" required class="form-control" >
+                        <select id="PelambreId" name="PelambreId" required class="form-control" onchange="NumeroPielesPelambre();">
                             <option value="0">Seleccione una lo que desea descarnar</option>
                         </select>
                         <br />
