--- a/ServicuerosSA/Views/Curtidos/Index.cshtml
+++ b/ServicuerosSA/Views/Curtidos/Index.cshtml
@@ -59,6 +59,7 @@
                 <form>
                     <div class="form-group">
                         <label class="control-label">Fecha</label>
+                        <input id="fecha" name="fecha" class="form-control" type="date" />
                     </div>
                     <div class="form-group">
                         <label class="control-label">Peso</label>
@@ -66,11 +67,6 @@
                         <br />
                         <span id="mensajep" class="alert alert-danger hidden">Ingrese el peso de las Pieles a Curtir</span>
                     </div>
-                    <div class="form-group">
-                        <label class="control-label">Observaciones</label>
-                        <input id="Observaciones" name="Observaciones" class="form-control" />
-                    </div>
-
                     <div class="form-group">
                         <label class="control-label">Numero de Pieles</label>
                         <input id="numeroPieles" name="numeroPieles" required class="form-control" />
@@ -108,6 +104,10 @@
                         </select>
                         <br />
                         <span id="mensajeper" class="alert alert-danger hidden">Seleccione al personal asignado</span>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label">Observaciones</label>
+                        <input id="Observaciones" name="Observaciones" class="form-control" />
                     </div>
                 </form>
             </div>
